# cvauc-ci

./: .gitignore  .pre-commit-config.yaml  README.md  cvauc.py  influence_curves.py  pyproject.toml  requirements.txt  test_cvauc.py
src/cvauc_ci/: __init__.py  cvauc.py  influence_curves.py
tests/: test_cvauc.py
